fix: skills overflow-x is hidden

--- a/src/sass/components/_skills.scss
+++ b/src/sass/components/_skills.scss
@@ -9,6 +9,7 @@
   column-gap: 3rem;
 
   position: relative;
+  overflow-x: hidden;
 
   @media (max-width: 1400px) {
     column-gap: 0.2rem;
@@ -33,6 +34,7 @@
 
 .skill__block {
   width: 34.5rem;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1.4rem;
